# atmosphere-borad

./: .env.development  .env.production  LICENSE  README.md  package.json  start.sh  vite.config.js
backend/: a.json  backend.py  data.py  pyproject.toml
src/: App.vue  main.js
src/api/: data.js  user.js
src/assets/: main.css
src/components/: BoradTable.vue  CVChart.vue  CVPieChart.vue  HeaderTitle.vue  LineEchart.vue  PMChart.vue  RainChart.vue  SWPChart.vue  SWPPieChart.vue  THPieChart.vue  TempandHumChart.vue  ThreeCPieChart.vue  ThreeConditionsChart.vue  VLChart.vue  WindChart.vue
src/router/: index.js
src/router/modules/: demo.js
src/utils/: request.js
src/views/: BoradView.vue
