[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["longsihua2003 <1161443436@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flask = "^3.1.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "backend:main"
